# tradestation_bot

./: .env.example  .gitignore  README.md  cli.py  logging.toml  main.py  pyproject.toml  strategy_assignments.toml  stream_config.toml
app/account/: account_service.py
app/auth/: auth_service.py  auth_session.py  token_manager.py
app/broker/: tradestation_client.py
app/market_data/: bar_service.py  market_data_service.py  market_data_stream_manager.py  stream_manager.py  stream_service.py
app/orders/: order_service.py  order_stream_manager.py
app/schemas/: accounts.py  bars.py  orders.py  signals.py  symbols.py
app/strategies/: base_strategy.py  registry.py  strategy.py  strategy_manager.py
app/strategies/analyzers/: bar_analysis.py
app/strategies/backtest/: backtest_market_data_service.py  backtest_order_service.py  backtester.py
app/strategies/entries/: base_entry.py  retracement_entry.py
app/strategies/setups/: base_setup.py  ny_ifvg_liquidity_sweep_setup.py
app/utils/: logging.py  toml_loader.py
config/: settings.py
scripts/: close_all_positions.py  run_account.py  run_assignments.py  run_auth.py  run_backtest.py  run_order.py  run_stream.py
